fixed centering issue on iOS

--- a/app/static/CSS/mobile.css
+++ b/app/static/CSS/mobile.css
@@ -16,7 +16,7 @@ body, #right {
     width: 100%;
     border: 0;
     font-size: 2.5rem;
-    text-align: center;
+    text-align: -webkit-center;
     background-color: var(--main-color);
     background-image: var(--background);
     color: white;
